Aplicado o Swagger na rota Produto
